FIx: Benefits of Yoga Image Not Rendering and Font Size Too Large 1. Resolved the image rendering issue to ensure seamless content display.
Changes Made:
Last image link was not working so changed with a new image link you can the image if you want.
Also added the css for the image.

2. Adjusted the font size in the benefits section to maintain a consistent and aesthetically pleasing layout.

Changes made:
Added font size property on the benefits text.

--- a/css/yoga.css
+++ b/css/yoga.css
@@ -266,9 +266,12 @@ header {
 }
 
 .bfit img{
+    height: 25rem;
     width: 35%;
     max-width: 450px;
-    margin: 0 auto;
+    margin-top : 70px;
+    margin-left : 20px;
+    border-radius: 30px;
 }
 
 .btext{
